kubernetes/apps/code/git-pages/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: git-pages
  labels:
    app.kubernetes.io/name: git-pages
    app.kubernetes.io/instance: git-pages
spec:
  selector:
    app.kubernetes.io/name: git-pages
    app.kubernetes.io/instance: git-pages
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 3002
      targetPort: metrics
      protocol: TCP
