kubernetes/apps/code/git-pages/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: git-pages
  namespace: code
spec:
  parentRefs:
    - name: git-pages
      namespace: network
  rules:
    - backendRefs:
        - name: git-pages
          port: 3000
